- Items on https://github.com/abhinavc/web-application/issues/85   rectified. Mostly pertaining to the QuickTrial dialogs.

--- a/app/views/modals/teacher/_demo-intro.html.haml
+++ b/app/views/modals/teacher/_demo-intro.html.haml
@@ -5,17 +5,17 @@
   .span8
     %h1.blue= "Hello, #{current_account.loggable.first_name}!"
     %p
-      If you are new to Gradians.com, then might we suggest you try 
-      the QuickTrial first
+      If you are new to Gradians.com, we suggest <b>QuickTrial</b> as a way to
+      get familiar with how it works
     %ul
       %li
         %p
-          QuickTrial lets you experience what it is like to use Gradians.com 
+          QuickTrial gives you a taste of what it is like to use Gradians.com 
           and send student work for grading on a regular basis
       %li
         %p
-          It is a quick overview. If you have access to a pen, a printer and 
-          a scanner, then the whole exercise should take less than 10 minutes
+          If you have access to a pen, a printer and a scanner, then the whole 
+          exercise should take less than 10 minutes
       %li
         %p
           Press the button below to start your <b>QuickTrial</b> now
