--- a/app/views/modals/teacher/_demo.html.haml
+++ b/app/views/modals/teacher/_demo.html.haml
@@ -10,7 +10,7 @@
       .span8.offset1
         %h1.orange= "1. Pick a topic"
         %p
-          Pick from the topics topics below and we will create a short quiz, pertaining to it, on your behalf
+          Pick from the topics below and we will create a short quiz, pertaining to it, on your behalf
         %p
           The quiz will have 1-2 questions, and will be assigned to a fictitious student. 
         %p
