--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -16,6 +16,8 @@
     = render :partial => 'modals/user/account'
     = render :partial => 'modals/user/upload-scans'
     = render :partial => 'modals/student/enroll'
+    = render :partial => 'modals/student/enrollment-blocked'
+    = render :partial => 'modals/student/enrollment-confirm'
 
 !!!5
 
