[#85]: Specific notifications for specific situations ...
Situations
-----------
1. Said sektion does not exist
2. Student is already enrolled
3. Student cannot enroll because none of pre-existing names is even remotely similar

These should be notifications because they need to show and then go away
on their own automatically. Modals, on the hand, need to persist because
they have active components - like forms and buttons - in them

--- a/app/views/notifications/student/_enrollment-blocked.html.haml
+++ b/app/views/notifications/student/_enrollment-blocked.html.haml
@@ -1,5 +1,5 @@
 
-#m-enrollment-blocked.modal.fade.regular.row-fluid{ :role => :dialog }
+#n-enrollment-blocked.modal.fade.regular.row-fluid{ :data => { :autohide => 9000 } } 
   .span3
     = image_tag 'notifications/block-user.png', :class => 'big-icon'
   .span8
