--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -16,8 +16,11 @@
     = render :partial => 'modals/user/account'
     = render :partial => 'modals/user/upload-scans'
     = render :partial => 'modals/student/enroll'
-    = render :partial => 'modals/student/enrollment-blocked'
     = render :partial => 'modals/student/enrollment-confirm'
+  #notifications
+    = render :partial => 'notifications/student/enrollment-blocked'
+    = render :partial => 'notifications/student/enrolled-already'
+    = render :partial => 'notifications/student/sektion-not-found'
 
 !!!5
 
