--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1167,18 +1167,13 @@ li.split {
   }
 } 
 
-.btn-huge {
-  p {
-    border-bottom: 2px solid ;
-    padding-bottom: 12px ;
-  }
-  margin-top: -22px ;
-  padding: 20px ;
-  font-size: 21.75px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 12px;
-  [class^="icon-"], [class*=" icon-"] {
-    margin-top: 2px;
-  }
+#btn-register { 
+  margin-top: -5px ;
 }
+
+#lnk-faq { 
+  font: { 
+    size: 13px ;
+  } 
+}
+
