[#83] Show upload progress bar only when upload begins
Hide it again when upload ends

--- a/app/views/modals/user/_upload-scans.html.haml
+++ b/app/views/modals/user/_upload-scans.html.haml
@@ -9,10 +9,10 @@
         %h2= "What would you like to upload?"
         .btn.btn-inverse.btn-large.upload{:id => 'btn-upload-scans'}
           Scans for Grading
-          .progress
+          .progress.hide
             .bar
         .btn.btn-inverse.btn-large.upload.offset1{:id => 'btn-upload-sg'}
           Questions
-          .progress
+          .progress.hide
             .bar
 
