--- a/app/views/layouts/students.html.haml
+++ b/app/views/layouts/students.html.haml
@@ -46,7 +46,7 @@
                 %li
                   = simple_link :for => "Inbox", :id => 'lnk-st-inbox'
                 %li.dropdown
-                  = simple_link :for => "Upload", :id => 'lnk-upload', :href => '#m-upload-scans'
+                  = simple_link :for => "Upload", :id => 'lnk-upload', :href => '#m-upload-what'
                 %li.dropdown
                   = simple_link :for => "Enroll", :id => 'lnk-enroll-self', :href => '#m-enroll-self'
                 %li#cp-account-link.dropdown
