[#86]: Add .scroll to any element that should be height constrained ...
and in case content spills over, then a scroll bar should show automatically.

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -333,12 +333,16 @@ a {
 } 
 
 .tab-content { 
-  min-height: 500px ;
+  &:not[class~="scroll"] { min-height: 500px ; }
   > form { 
-    // display: none ;
     &.active { display: block ; }
   } 
 }  
+
+.scroll {
+  max-height: 300px ;
+  overflow: auto ;
+}
 
 .single-line {
   padding: {
