--- a/app/views/teachers/_rc.html.haml
+++ b/app/views/teachers/_rc.html.haml
@@ -11,8 +11,8 @@
     = simple_link :for => "Specific", :href => '#pane-tc-rc-3', :id => 'tab-tc-rc-3'
 
 .tab-content
-  #pane-tc-rc-1.tab-pane
-  #pane-tc-rc-2.tab-pane
+  #pane-tc-rc-1.tab-pane.scroll
+  #pane-tc-rc-2.tab-pane.scroll
   #pane-tc-rc-3.tab-pane
     .row-fluid.navbar.purge-skip
       = content_tag :button, "Show Solution", { :class => 'btn btn-primary btn-large pull-right', 
