--- a/app/views/teachers/_sektions.html.haml
+++ b/app/views/teachers/_sektions.html.haml
@@ -3,6 +3,6 @@
   %li
     = simple_link :for => "Groups", :href => '#pane-mng-sektions-1', :id => 'tab-mng-sektions-1'
 
-.tab-content
+.tab-content.scroll
   #pane-mng-sektions-1.tab-pane
       
