--- a/app/views/teachers/_wsb.html.haml
+++ b/app/views/teachers/_wsb.html.haml
@@ -10,9 +10,9 @@
       :class => 'nopurge-ever'
 
 .tab-content
-  #pane-wsb-quizzes.tab-pane
-  #pane-wsb-existing.tab-pane
-  #pane-wsb-sektions.tab-pane
+  #pane-wsb-quizzes.tab-pane.scroll
+  #pane-wsb-existing.tab-pane.scroll
+  #pane-wsb-sektions.tab-pane.scroll
     = render :partial => 'teachers/wsb-sektions', :locals => { :teacher => teacher }
 
     
