--- a/app/views/modals/teacher/_demo.html.haml
+++ b/app/views/modals/teacher/_demo.html.haml
@@ -5,12 +5,11 @@
   .row-fluid
     -# build
     .span3.offset1
-      .span3
-        = image_tag 'quick-trial/build.png', :class => 'big-icon'
-      .span8.offset1
+      .span10.offset1
         %h1.orange= "1. Pick a topic"
         %p
-          Pick from the topics below and we will create a short quiz, pertaining to it, on your behalf
+          \... from the ones shown below and click <b>Make PDF</b>. 
+          The system will then make a short quiz for you on that topic
         %p
           The quiz will have 1-2 questions, and will be assigned to a fictitious student. 
         %p
@@ -43,7 +42,9 @@
           Most - if not all - modern scanners have the option of saving scans as a PDF.
           Select that option, so that you create one PDF file for all scanned pages
         %p
-          Upload that PDF - and that's it! You'll get an email as soon as we are done grading your response!
+          Upload that PDF - and that's it! We will grade the pretend worksheet and 
+          you will get an e-mail when we are done (usually within 2 working days). 
+          To see the graded results, start by clicking on <b>Report Cards</b>
           
     -# what is this
       .span2
