--- a/app/views/modals/teacher/_demo.html.haml
+++ b/app/views/modals/teacher/_demo.html.haml
@@ -27,8 +27,8 @@
           Then, write solutions (as a student would, and preferably with a pen) in 
           the space provided after each question
         %p
-          <b>Note:</b> Intentionally commit mistakes in the solution if you would like to see 
-          a sample of our feedback
+          <b>Note:</b> If you want to see how we grade and what we 
+          look for in a solution, then make some mistakes - intentionally
 
     -# upload
     .span4
@@ -43,7 +43,7 @@
           Select that option, so that you create one PDF file for all scanned pages
         %p
           Upload that PDF - and that's it! We will grade the pretend worksheet and 
-          you will get an e-mail when we are done (usually within 2 working days). 
+          you will get an e-mail when we are done grading (usually within 2 working days). 
           To see the graded results, start by clicking on <b>Report Cards</b>
           
     -# what is this
