--- a/app/views/examiners/_resolution-pending.html.haml
+++ b/app/views/examiners/_resolution-pending.html.haml
@@ -5,3 +5,13 @@
 
 .tab-content
   #pane-resolution-pending.tab-pane
+    = simple_form_for :code, :remote => true, :url => resolve_path, 
+    :defaults => { :label => false, :required => false }, :html => { :id => 'form-resolve-scans' } do |f|
+      = f.input :a, :input_html => { :maxlength => 4 , :size => 4, :class => 'pull-left' }
+      = f.input :b, :input_html => { :maxlength => 4, :size => 4, :class => 'pull-left'  }
+      = f.input :c, :input_html => { :maxlength => 3, :size => 3, :class => 'pull-left'  }
+      .btn-group.pull-right
+        = simple_button :icon => 'icon-qrcode', :class => 'btn-primary', :type => :submit
+        = simple_button :icon => 'icon-trash', :class => 'btn-primary', :type => :submit
+
+      #unresolved-scans
