[#82] Last bits of resolution panel added ...

--- a/app/views/examiners/_resolution-pending.html.haml
+++ b/app/views/examiners/_resolution-pending.html.haml
@@ -10,8 +10,8 @@
       = f.input :a, :input_html => { :maxlength => 4 , :size => 4, :class => 'pull-left' }
       = f.input :b, :input_html => { :maxlength => 4, :size => 4, :class => 'pull-left'  }
       = f.input :c, :input_html => { :maxlength => 3, :size => 3, :class => 'pull-left'  }
-      .btn-group.pull-right
-        = simple_button :icon => 'icon-qrcode', :class => 'btn-primary', :type => :submit
-        = simple_button :icon => 'icon-trash', :class => 'btn-primary', :type => :submit
+      = simple_button :icon => 'icon-qrcode', :class => 'btn-primary', :type => :submit
+      = simple_button :icon => 'icon-trash', :class => 'btn-primary', :type => :submit
 
-      #unresolved-scans
+      .row-fluid.push-down
+        #unresolved-scans
