Show some notification when a worksheet - or worksheets - are compiled
For quizzes, there is a visual cue ( quiz becomes enabled ). But there
was nothing for worksheets

--- a/app/views/notifications/teacher/_compiled.html.haml
+++ b/app/views/notifications/teacher/_compiled.html.haml
@@ -3,10 +3,6 @@
   .span3
     = image_tag 'notifications/document.png', :class => 'big-icon'
   .span8
-    %p.title= "PDFs Ready!"
-    .span5
-      .subtext= "Quizzes"
-      %ul.quizzes
-    .span5.offset1
-      .subtext= "Worksheets"
-      %ul.worksheets
+    %p.title= "Worksheet(s) ready"
+    %p
+      You can now download and print the worksheet you just built
