[resolution panel]: Style the delete scan button differently from resolve button

--- a/app/views/examiners/_resolution-pending.html.haml
+++ b/app/views/examiners/_resolution-pending.html.haml
@@ -11,7 +11,7 @@
       = f.input :b, :input_html => { :maxlength => 4, :size => 4, :class => 'pull-left'  }
       = f.input :c, :input_html => { :maxlength => 3, :size => 3, :class => 'pull-left'  }
       = simple_button :icon => 'icon-qrcode', :class => 'btn-primary', :type => :submit
-      = simple_button :icon => 'icon-trash', :class => 'btn-primary', :type => :submit
+      = simple_button :icon => 'icon-trash', :class => 'btn-danger', :type => :submit
 
       .row-fluid.push-down
         #unresolved-scans
