- about us files

--- a/app/views/layouts/faq.html.haml
+++ b/app/views/layouts/faq.html.haml
@@ -18,6 +18,10 @@
         .span3.offset1{ :id => 'faq-side-panel' }
           %ul.nav.nav-list.offset1
             %li
+              = simple_link :for => "Home", :href => '/', :icon => 'icon-home'
+            %li
+              = simple_link :for => "About Us", :href => '#faq-about-us', :icon => 'icon-chevron-right'
+            %li
               = simple_link :for => "Generally", :href => '#faq-general', :icon => 'icon-chevron-right'
             %li
               = simple_link :for => "Using the website", :href => '#faq-website', :icon => 'icon-chevron-right'
@@ -26,13 +30,11 @@
             %li
               = simple_link :for => "On Scanning", :href => '#faq-scanning', :icon => 'icon-chevron-right'
             %li
-              = simple_link :for => "Home", :href => '/', :icon => 'icon-home'
-            %li
-              = simple_link :for => "About Us", :href => '#faq-about-us', :icon => 'icon-user-right'
-            %li
-              = simple_link :for => "Contact", :href => '#faq-contact', :icon => 'icon-inbox-right'
+              = simple_link :for => "Contact", :href => '#faq-contact', :icon => 'icon-chevron-right'
         .span7.offset3{ :id => 'faq-content-panel' }
+          = render :partial => 'faq/aboutus'
           = render :partial => 'faq/general'
           = render :partial => 'faq/website'
           = render :partial => 'faq/grading'
           = render :partial => 'faq/scanning'
+          = render :partial => 'faq/contactus'
