--- a/app/views/layouts/faq.html.haml
+++ b/app/views/layouts/faq.html.haml
@@ -15,12 +15,12 @@
               %a.brand.span4{ :href => "/"}
                 = image_tag "logo-mit-beta-2.png"
       .row-fluid
-        .span3.offset1{ :id => 'faq-side-panel' }
+        .span3{ :id => 'faq-side-panel' }
           %ul.nav.nav-list.offset1
             %li
               = simple_link :for => "Home", :href => '/', :icon => 'icon-home'
             %li
-              = simple_link :for => "About Us", :href => '#faq-about-us', :icon => 'icon-chevron-right'
+              = simple_link :for => "Who we are", :href => '#faq-about-us', :icon => 'icon-chevron-right'
             %li
               = simple_link :for => "Generally", :href => '#faq-general', :icon => 'icon-chevron-right'
             %li
