--- a/app/views/menus/user/_abouts.html.haml
+++ b/app/views/menus/user/_abouts.html.haml
@@ -1,8 +1,8 @@
 %ul#abouts.dropdown-menu.dropdown-inverse{ :role => :menu }
   %li
-    = simple_link :for => "Team", :href => faq_path, :id => 'lnk-team'
+    = simple_link :for => "Team", :href => '/faq#faq-about-us', :id => 'lnk-team'
   %li
-    = simple_link :for => "Contact", :href => faq_path, :id => 'lnk-contact'
+    = simple_link :for => "Contact", :href => '/faq#faq-contact', :id => 'lnk-contact'
   %li
-    = simple_link :for => "faq", :href => faq_path, :id => 'lnk-faq'
+    = simple_link :for => "faq", :href => '/faq#faq-general', :id => 'lnk-faq'
 
