Minor text edits

--- a/app/views/faq/_contactus.html.haml
+++ b/app/views/faq/_contactus.html.haml
@@ -3,9 +3,9 @@
   %h3.orange= "Contact"
   .span8
     %p
-      help@gradians.com
+      Email - help@gradians.com
     %p
       Skype - gradians.com 
     %p
-      +91-95829-67528, +91-98186-91751
+      Phone - +91-95829-67528, +91-98186-91751
 
