- more text edits

--- a/app/views/faq/_aboutus.html.haml
+++ b/app/views/faq/_aboutus.html.haml
@@ -11,7 +11,7 @@
         .accordion-body.collapse{ :id => 'au-2' }
           .accordion-inner
             %p
-              A graduate of Anderson School of Business UCLA, Abhinav first 
+              A graduate of Anderson School of Management UCLA, Abhinav first 
               realized the the need for gradians.com while grading papers for his 
               statistics  professor. It occurred to him that if this was something 
               teachers had to do themselves, they could not do it very often.
@@ -30,11 +30,11 @@
         .accordion-body.collapse{ :id => 'au-3' }
           .accordion-inner
             %p
-              A graduate from NYU's Computer Science Department Akshay has been
-              involved with Gradians.com from its inception. He worked
-              in the Financial Services industry for over eight years before 
-              joining Abhinav and brings an appreciation for technology driven 
-              analysis and data management.
+              A graduate of NYU's Courant Institute of Mathematical Science,
+              Akshay has been involved with Gradians.com from its inception. 
+              He worked in the Financial Services industry for over eight years
+              before joining Abhinav and brings an appreciation for technology 
+              driven analysis and data management.
             %p
               Coupled with this, his technical expertise in the area of 
               distributed IT systems has helped to give shape to the Gradians 
