[#102]: Add HTML for newly created sektion wherever necessary
Do this so that a re-load is not required.
  1. Add a left-tab in wsb
  2. Lines item in pane-mng-sektions ( list of sektions )
  3. Allow full reload in pane-dive-1  (deep-dive)

--- a/app/views/teachers/_deepdive.html.haml
+++ b/app/views/teachers/_deepdive.html.haml
@@ -1,8 +1,7 @@
 
 %ul.nav.nav-tabs.always-on
   %li
-    = simple_link :for => "Group", :id => "tab-dive-1",
-      :href => '#pane-dive-1', :class => 'nopurge-ever'
+    = simple_link :for => "Group", :id => "tab-dive-1", :href => '#pane-dive-1'
   %li
     = simple_link :for => "By Topic", :id => "tab-dive-2",
       :href => '#pane-dive-2', :class => 'nopurge-ever'
