[#55, #112]: Conflicting fixes reconciled
Explicitly specifying whether or not AJAX requests should be re-issued
if single-lines within a tab-pane are re-clicked

This is done by setting .reissue-ajax on the .tab-pane/.content etc.
When set, any single-line within the .tab-pane can be re-clicked to full effect

--- a/app/views/teachers/_rc.html.haml
+++ b/app/views/teachers/_rc.html.haml
@@ -11,7 +11,7 @@
     = simple_link :for => "Specific", :href => '#pane-tc-rc-3', :id => 'tab-tc-rc-3'
 
 .tab-content
-  #pane-tc-rc-1.tab-pane.scroll
+  #pane-tc-rc-1.tab-pane.scroll.reissue-ajax
   #pane-tc-rc-2.tab-pane.scroll
   #pane-tc-rc-3.tab-pane
     .row-fluid.navbar.purge-skip
