Moved partial to examiners/ as that is where it belongs

--- a/app/views/layouts/admin-examiner.html.haml
+++ b/app/views/layouts/admin-examiner.html.haml
@@ -64,7 +64,7 @@
           #left-4
             = render :partial => 'toolbox/grd-pending'
           #left-5
-            = render :partial => 'toolbox/typeset-pending'
+            = render :partial => 'examiners/typeset-pending'
           #left-6
             = render :partial => 'examiners/resolution-pending'
 
