[#113] Initial shell code

--- a/app/views/examiners/_typeset-pending.html.haml
+++ b/app/views/examiners/_typeset-pending.html.haml
@@ -8,4 +8,6 @@
 .tab-content
   #pane-typeset-new.tab-pane
   #pane-typeset-ongoing.tab-pane
+    .accordion{ :id => 'sg-ongoing' }
+      .accordion-group
 
