[#113]: First draft of new interface for seeing ongoing suggestions ...
Each ongoing suggestion is identified by the date on which it was received.
Use this to prioritize typsetting

On opening a suggestion, one can see the slots blocked for it.
Slots that have been tagged are enabled and can be clicked to see question preview.
Untagged slots are disabled

--- a/app/assets/stylesheets/bootstrap-overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap-overrides.css.scss
@@ -1193,3 +1193,29 @@ li.split {
     margin-right: 5px ;
   }
 } 
+
+#sg-ongoing { 
+  > .accordion-group { 
+    border: none ;
+  }
+
+  a {
+    font-size : 12px ;
+    color: white ;
+    &:hover { 
+      text-decoration: none ;
+    } 
+  }
+
+  .accordion-toggle { 
+    padding: 8px 15px 4px 15px ;
+    border-bottom: 1px solid $lightgray ; 
+  } 
+
+  .single-line { 
+    max-height: 20px ;
+    min-height: 0px ;
+    font-size: 11px ;
+    font-variant: small-caps ;
+  } 
+}
