Changes related to simplified YAML not working exactly as expected ...
Hence, stashing the changes locally for now so that other issues can
be solved and committted on master

Will come back to this later

--- a/app/views/examiners/_tag-verticals.html.haml
+++ b/app/views/examiners/_tag-verticals.html.haml
@@ -5,7 +5,7 @@
     - Vertical.order(:name).each do |m|
       %li
         = simple_link :for => "#{m.name}", :toggle => :tab, :marker => "#{m.id}",
-        :href => "#pane-vertical-topics", :url => "vertical/topics.json?id=:id"
+        :href => "#pane-vertical-topics", :url => { :self => "vertical/topics.json?id=:id" }
 
   .tab-content.span7
     #pane-vertical-topics.tab-pane.purge-blind
