--- a/app/views/menus/teacher/_per-ws.html.haml
+++ b/app/views/menus/teacher/_per-ws.html.haml
@@ -2,7 +2,7 @@
 %ul.dropdown-menu.dropdown-inverse#per-ws{ :role => :menu }
   %li
     = simple_link :for => "Download PDF", :id => 'lnk-ws-download', :icon => 'icon-download',
-    :url => "#{Gutenberg['server']}/mint/ws/:a/assignment-:c-:b.pdf"
+    :url => { :self => "#{Gutenberg['server']}/mint/ws/:a/assignment-:c-:b.pdf" }
   %li.nav-header= "Publish"
   %li
     = simple_link :for => "Send to student accounts", :id => 'lnk-ws-publish', :icon => 'icon-share'
