--- a/app/views/menus/teacher/_howto.html.haml
+++ b/app/views/menus/teacher/_howto.html.haml
@@ -22,7 +22,7 @@
   %li.divider
   %li
     = simple_link :for => "Ask a question", :icon => 'icon-question-sign', 
-      :id => 'lnk-ask-a-question', :href => '#m-ask-a-question'
+      :id => 'lnk-ask-a-question'
 -#
   %li
     = simple_link :for => "Make a Worksheet", :id => 'help-make-a-ws', 
