--- a/app/views/teachers/_wsb-sektions.html.haml
+++ b/app/views/teachers/_wsb-sektions.html.haml
@@ -8,7 +8,7 @@
     - my_sektions.each do |m|
       %li
         = simple_link :for => "#{m.label}", :toggle => :tab, :marker => "#{m.id}",
-        :href => "#wsb-sektions", :url => "sektion/students.json?id=#{m.id}&context=wsb&quiz=:prev",
+        :href => "#wsb-sektions", :url => { :self => "sektion/students.json?id=#{m.id}&context=wsb&quiz=:prev" },
         :prev => 'tab-wsb-quizzes'
 
   -# List of students - by sektion - shown in a sektion-specific tab and wrapped in a <form>
